Add missing EasyRPG flag documentation

--- a/resources/unix/easyrpg-player.6.adoc
+++ b/resources/unix/easyrpg-player.6.adoc
@@ -360,6 +360,9 @@ Options in section 'Patch' (see also options starting with *--patch*):
 *DynRPG*=_1_::
   Same as *--patch-dynrpg*.
 
+*EasyRPG*=_1_::
+  Same as *--patch-easyrpg*.
+
 *KeyPatch*=_1_::
   Same as *--patch-key-patch*.
 
